Switched to use the main branch of foundry-vtt-types

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"devDependencies": {
         "@eslint/js": "^9.9.0",
         "@foundryvtt/foundryvtt-cli": "^1.0.3",
-        "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#0a62d5d4dc84d70a77c7a9c8360e1e2ead5de242",
+        "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#main",
         "@rollup/plugin-commonjs": "^26.0.1",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
