--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,15 +116,15 @@ jobs:
             `# The name of the output file`      \
              ./module.zip                        \
             `# The files that will be included.` \
-            module.json                          \
+            src/module.json                      \
             README.md                            \
             LICENSE                              \
-            templates                            \
+            src/templates                        \
             scripts/                             \
-            styles/                              \
+            src/styles/                          \
             packs/                               \
-            language/                            \
-            lang/
+            src/module                           \
+            src/lang/
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
 
