--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -16,11 +16,11 @@ jobs:
             fetch-depth: 0
 
       # Load the manifest into memory
-      - name: Load system manifest
+      - name: Load module manifest
         id: manifest
         uses: zoexx/github-action-json-file-properties@release
         with:
-          file_path: "./src/system.json"
+          file_path: "./src/module.json"
 
       # Set up variables
       - name: Set up vars
@@ -28,9 +28,9 @@ jobs:
           BRANCH=${{github.ref_name}}
           RELEASE_VERSION=$(echo ${{github.ref_name}} | cut -d'-' -f2)
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
-          echo "ZIP_NAME=cosmere-rpg-prerelease-$RELEASE_VERSION.zip" >> $GITHUB_ENV
-          echo "DOWNLOAD_URL=https://github.com/${{github.repository}}/releases/download/prerelease-$RELEASE_VERSION/cosmere-rpg-prerelease-$RELEASE_VERSION.zip" >> $GITHUB_ENV
-          echo "MANIFEST_URL=https://github.com/${{github.repository}}/releases/download/prerelease-$RELEASE_VERSION/system.json" >> $GITHUB_ENV
+          echo "ZIP_NAME=cosmere-automated-actions-prerelease-$RELEASE_VERSION.zip" >> $GITHUB_ENV
+          echo "DOWNLOAD_URL=https://github.com/${{github.repository}}/releases/download/prerelease-$RELEASE_VERSION/cosmere-automated-actions-prerelease-$RELEASE_VERSION.zip" >> $GITHUB_ENV
+          echo "MANIFEST_URL=https://github.com/${{github.repository}}/releases/download/prerelease-$RELEASE_VERSION/module.json" >> $GITHUB_ENV
 
       # Verify manifest
       - name: Verify manifest
@@ -50,7 +50,7 @@ jobs:
       - name: Update manifest
         uses: TomaszKandula/variable-substitution@v1.0.2
         with:
-          files: "./src/system.json"
+          files: "./src/module.json"
         env:
           version: "prerelease-${{ env.RELEASE_VERSION }}"
           manifest: ${{ env.MANIFEST_URL }}
@@ -80,7 +80,7 @@ jobs:
         with:
           name: "Pre-release ${{ env.RELEASE_VERSION }}"
           tag: prerelease-${{ env.RELEASE_VERSION }}
-          artifacts: "./src/system.json, ./${{ env.ZIP_NAME }}"
+          artifacts: "./src/module.json, ./${{ env.ZIP_NAME }}"
           draft: false
           prerelease: true
           allowUpdates: true
