--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ run-name: Publish release to Foundry
 on:
   workflow_dispatch:
     secrets:
-      access-token:
+      FOUNDRY_PACKAGE_API_TOKEN:
         description: "Secret token for Foundry API"
         required: true
     inputs:
@@ -24,7 +24,7 @@ jobs:
       uses: cs96and/FoundryVTT-release-package@v1.0.3
       with:
         # The secret token of your package for the FoundryVTT Package Release API.
-        package-token: ${{ secrets.access-token }}
+        package-token: ${{ secrets.FOUNDRY_PACKAGE_API_TOKEN }}
         # The URL of the JSON manifest of your package.
         manifest-url: https://github.com/posadist-revolution/cosmere-advanced-encounters/releases/download/${{ inputs.release-version }}/module.json
         # The version of the release.  Leave undefined to use the `version` entry from your manifest file.
