Fixed issue with @system imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
 			],
 			"@module/*": [
 				"./src/module/*"
+			],
+			"@system/*": [
+				"./src/declarations/cosmere-rpg/system/*"
 			]
 		}
 	},
